--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<ul></ul><li>vai ter uma imagem aqui</li>
-<li>escola</li>
+<header>
+<ul>
+    <li>vai ter uma imagem aqui</li>
+    <li>escola</li>
+    <li>estudantes</li>
+</ul>
+</header>
+
 <body>
     
 </body>
