--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Document</title>
+ <link rel="stylesheet" href="style.css"
 </head>
-<header>
-<ul>
-    <li>vai ter uma imagem aqui</li>
-    <li>escola</li>
-    <li>estudantes</li>
-</ul>
-</header>
-
 <body>
-    
+<header class="cabecalho">
+<img class="cabecalho-imagem">
+<img src="cat.png" alt="gato">
+<ul class="cabecalho-lista"> <li class="cabecalho-lista-item">
+<li class="cabecalho-lista-item">estudantes</li>
+</ul>
+</header>    
 </body>
 </html>
