--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="pt">
 <head>
  <meta charset="UTF-8">
+ <meta http-equiv= "X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Document</title>
- <link rel="stylesheet" href="style.css"
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="cabecalho">
-<img class="cabecalho-imagem">
+<img class="cabecalho-imagem" src="logo-alurastart.png" alt="logotipo da Alura start" >
 <img src="cat.png" alt="gato">
-<ul class="cabecalho-lista"> <li class="cabecalho-lista-item">
-<li class="cabecalho-lista-item">estudantes</li>
+<li class="cabecalho-lista-item">Escola</li>
+<li class="cabecalho-lista-item">Estudantes</li>
 </ul>
 </header>    
 </body>
