--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
 <header class="cabecalho">
-<img src="cat.png" alt="gato">
+<img class="cabecalho-imagem"src=cat.png" alt="gato">
 <li class="cabecalho-lista-item">Escola</li>
 <li class="cabecalho-lista-item">Estudantes</li>
-</ul>
 </header>    
 </body>
 </html>
