--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
 <header class="cabecalho">
 <img class="cabecalho-imagem"src=cat.png" alt="gato">
+<ul class="cabecalho-lista">
 <li class="cabecalho-lista-item">Escola</li>
 <li class="cabecalho-lista-item">Estudantes</li>
+</ul>
 </header>    
+<section class="escola-div-conteudo"
 </body>
 </html>
