--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 <li class="cabecalho-lista-item">Estudantes</li>
 </ul>
 </header>    
-<section class="escola-div-conteudo"
+<section class="escola">
+<div class="escola-div-conteudo">
+<h2 class="escola-titulo">Sobre a escola</h2>
+<p class="escola-texto-um">A escola alura foi fundada em 2010.</p>
+<p class="escola-texto-dois">A turma mais estudiosa é a segunda série.</p>
+</div>
+<img class="escola-imagem" src="formula.img" alt="professora no quadro">
+</section>
 </body>
 </html>
