--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="cabecalho">
-<img class="cabecalho-imagem"src=cat.png" alt="gato">
+<img class="cabecalho-imagem"src="cat.png" alt="gato">
 <ul class="cabecalho-lista">
 <li class="cabecalho-lista-item">Escola</li>
 <li class="cabecalho-lista-item">Estudantes</li>
