--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 <p class="escola-texto-dois">A turma mais estudiosa é a segunda série.</p>
 </div>
 <img class="escola-imagem" src="formula.img" alt="professora no quadro">
+<h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+</section>
+<section class= "estudante">
+
 </section>
 </body>
 </html>
