--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
  <meta charset="UTF-8">
  <meta http-equiv= "X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="cabecalho">
-<img class="cabecalho-imagem"src="cat.png" alt="gato">
+<img class="cabecalho-imagem"src="dowload.jpeg" alt="alura logo">
 <ul class="cabecalho-lista">
 <li class="cabecalho-lista-item">Escola</li>
 <li class="cabecalho-lista-item">Estudantes</li>
@@ -23,8 +23,6 @@
 </div>
 <img class="escola-imagem" src="formula.img" alt="professora no quadro">
 <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-</section>
-<section class= "estudante">
 </section>
 </body>
 </html>
