--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="cabecalho">
-<img class="cabecalho-imagem"src="dowload.jpeg" alt="alura logo">
+<img class="cabecalho-imagem"src="alura.png" alt="alura logo">
 <ul class="cabecalho-lista">
 <li class="cabecalho-lista-item">Escola</li>
 <li class="cabecalho-lista-item">Estudantes</li>
@@ -21,7 +21,7 @@
 <p class="escola-texto-um">A escola alura foi fundada em 2010.</p>
 <p class="escola-texto-dois">A turma mais estudiosa é a segunda série.</p>
 </div>
-<img class="escola-imagem" src="formula.img" alt="professora no quadro">
+<img class="escola-imagem" src="cat.png" alt="professora no quadro">
 <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
 </section>
 </body>
