--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="cabecalho">
-<img class="cabecalho-imagem"src="alura.png" alt="alura logo">
+<img class="cabecalho-imagem"src="unnamed.jpg" alt="alura logo">
 <ul class="cabecalho-lista">
 <li class="cabecalho-lista-item">Escola</li>
 <li class="cabecalho-lista-item">Estudantes</li>
