--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="cabecalho">
-<img class="cabecalho-imagem"src="1200x630wa.png" alt="alura logo">
+<img class="cabecalho-imagem"src="alurastart logo_transparente_web.png" alt="alura logo">
 <ul class="cabecalho-lista">
 <li class="cabecalho-lista-item">Escola</li>
 <li class="cabecalho-lista-item">Estudantes</li>
