--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p class="escola-texto-um">A escola alura foi fundada em 2010.</p>
 <p class="escola-texto-dois">A turma mais estudiosa é a segunda série.</p>
 </div>
-<img class="escola-imagem" src="cat.png" alt="professora no quadro">
+<img class="escola-imagem" src="Studying-pana (1).png" alt="estudando">
 <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
 </section>
 </body>
