--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <section class="escola">
 <div class="escola-div-conteudo">
 <h2 class="escola-titulo">Sobre a escola</h2>
-<p class="escola-texto-um">A escola alura foi fundada em 2010.</p>
+<p class="escola-texto-um">A escola alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
 <p class="escola-texto-dois">A turma mais estudiosa é a segunda série.</p>
 </div>
 <img class="escola-imagem" src="Studying-pana (1).png" alt="estudando">
