--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="escola-div-conteudo">
 <h2 class="escola-titulo">Sobre a escola</h2>
 <p class="escola-texto-um">A escola alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
-<p class="escola-texto-dois">A turma mais estudiosa é a segunda série.</p>
+<p class="escola-texto-dois">A turma mais estudiosa é a Segunda Série.Uma turma diversa e engajada, as vezes, um pouco baguncenceira, mas que entrega exelentes resultados.</p>
 </div>
 <img class="escola-imagem" src="Studying-pana (1).png" alt="estudando">
 <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
