--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 <p class="escola-texto-um">A escola alura foi fundada em 2010 com o objetivo de ensinar 
     Pensamento Computacional através da Programação.</p>
 <p class="escola-texto-dois">A turma mais estudiosa é a Segunda Série.
-    Uma turma diversa e engajada, as vezes, um pouco baguncenceira, mas que entrega exelentes resultados.</p>
+    Uma turma diversa e engajada, as vezes, um pouco baguncenceira, mas que entrega exelentes resultados!</p>
 </div>
 <img class="escola-imagem" src="Studying-pana (1).png" alt="estudando">
+</section>
 </body>
 </html>
