--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
 </div>
 <img class="escola-imagem" src="Studying-pana (1).png" alt="estudando">
 </section>
+<section class="estudante">
+        <h2 class=”estudante-titulo”>Quem são nossos estudantes?</h2>
+</section>
 </body>
 </html>
