--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </section>
 <section class="estudante">
         <h2 class=”estudante-titulo”>Quem são nossos estudantes?</h2>
+        <img class="estudante-imagem" src="" alt="foto aluno">
 </section>
 </body>
 </html>
