--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <section class="estudante">
         <h2 class=”estudante-titulo”>Quem são nossos estudantes?</h2>
         <img class="estudante-imagem" src="th.jpg" alt="foto aluno">
+        <h3 class="estudante-nome">Estudante</h3>
 </section>
 </body>
 </html>
