--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <h2 class=”estudante-titulo”>Quem são nossos estudantes?</h2>
         <img class="estudante-imagem" src="th.jpg" alt="foto aluno">
         <h3 class="estudante-nome">Estudante</h3>
+        <img class="estudante-icone" src="" alt="icone instagram">
+        <img class="estudante-icone" src="" alt="icone github">
+        <img class="estudante-icone" src="" alt="icone youtube">
 </section>
 </body>
 </html>
