--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
 </section>
 <section class="estudante">
         <h2 class=”estudante-titulo”>Quem são nossos estudantes?</h2>
+        <div class="estudante-div">
         <img class="estudante-imagem" src="th.jpg" alt="foto aluno">
         <h3 class="estudante-nome">Estudante</h3>
         <img class="estudante-icone" src="" alt="icone instagram">
         <img class="estudante-icone" src="" alt="icone github">
         <img class="estudante-icone" src="" alt="icone youtube">
+        </div>
 </section>
 </body>
 </html>
