--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="estudante-div">
         <img class="estudante-imagem" src="th.jpg" alt="foto aluno">
         <h3 class="estudante-nome">Estudante</h3>
-        <img class="estudante-icone" src="" alt="icone instagram">
-        <img class="estudante-icone" src="" alt="icone github">
-        <img class="estudante-icone" src="" alt="icone youtube">
+        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+        <img class="estudante-icone" src="github.png" alt="icone github">
+        <img class="estudante-icone" src="youtube.png" alt="icone youtube">
         </div>
 </section>
 </body>
