--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h3 class="estudante-nome">Estudante</h3>
         <img class="estudante-icone" src="instagram.png" alt="icone instagram">
         <img class="estudante-icone" src="github.png" alt="icone github">
-        <img class="estudante-icone" src="youtube.png" alt="icone youtube">
+        <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
         </div>
 </section>
 </body>
