--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <header class="cabecalho">
 <img class="cabecalho-imagem"src="alurastart logo_transparente_web.png" alt="alura logo">
 <ul class="cabecalho-lista">
-<li class="cabecalho-lista-item">Escola</li>
-<li class="cabecalho-lista-item">Estudantes</li>
+<li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
+<li class="cabecalho-lista-item"><a href="#estudantes">Estudantes</a></li>
 </ul>
 </header>    
 <section class="escola">
