--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <li class="cabecalho-lista-item"><a href="#estudantes">Estudantes</a></li>
 </ul>
 </header>    
-<section class="escola">
+<section id="escola">
 <div class="escola-div-conteudo">
 <h2 class="escola-titulo">Sobre a escola</h2>
 <p class="escola-texto-um">A escola alura foi fundada em 2010 com o objetivo de ensinar 
@@ -28,7 +28,7 @@
 </div>
 <img class="escola-imagem" src="Studying-pana (1).png" alt="estudando">
 </section>
-<section class="estudante">
+<section id="estudante">
         <h2 class=”estudante-titulo”>Quem são nossos estudantes?</h2>
         <div class="estudante-div">
         <img class="estudante-imagem" src="th.jpg" alt="foto aluno">
