--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <img class="estudante-icone" src="github.png" alt="icone github">
         <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
         </div>
-</section>
+    </section>
+        <footer class="rodape">
+            <img class="rodape-imagem"src="alurastartlogo_transparente_web.png" alt="logo da alura start">
+        </footer>
 </body>
 </html>
