--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div>
 <img class="escola-imagem" src="Studying-pana (1).png" alt="estudando">
 </section>
-<section id="estudante">
+<section id="estudantes">
         <h2 class=”estudante-titulo”>Quem são nossos estudantes?</h2>
         <div class="estudante-div">
         <img class="estudante-imagem" src="th.jpg" alt="foto aluno">
