--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <img class="cabecalho-imagem"src="alurastart logo_transparente_web.png" alt="alura logo">
 <ul class="cabecalho-lista">
 <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
-<li class="cabecalho-lista-item"><a href="#estudantes">Estudantes</a></li>
+<li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
 </ul>
 </header>    
 <section id="escola">
@@ -28,7 +28,7 @@
 </div>
 <img class="escola-imagem" src="Studying-pana (1).png" alt="estudando">
 </section>
-<section id="estudantes">
+<section id="estudante">
         <h2 class=”estudante-titulo”>Quem são nossos estudantes?</h2>
         <div class="estudante-div">
         <img class="estudante-imagem" src="th.jpg" alt="foto aluno">
