--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
- <meta charset="UTF-8">
- <meta http-equiv= "X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta charset="UTF-8">
+     <meta http-equiv= "X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Document</title>
- <link rel="stylesheet" href="style.css">
- <link "<link rel="preconnect" href="https://fonts.googleapis.com">
- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="style.css">
+     <link "<link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <header class="cabecalho">
-<img class="cabecalho-imagem"src="alurastart logo_transparente_web.png" alt="alura logo">
-<ul class="cabecalho-lista">
-<li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
-<li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
-</ul>
+     <img class="cabecalho-imagem"src="alurastart logo_transparente_web.png" alt="alura logo">
+     <ul class="cabecalho-lista">
+     <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
+     <li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li></ul>
 </header>    
 <section id="escola">
-<div class="escola-div-conteudo">
-<h2 class="escola-titulo">Sobre a escola</h2>
-<p class="escola-texto-um">A escola alura foi fundada em 2010 com o objetivo de ensinar 
+     <div class="escola-div-conteudo">
+     <h2 class="escola-titulo">Sobre a escola</h2>
+     <p class="escola-texto-um">A escola alura foi fundada em 2010 com o objetivo de ensinar 
     Pensamento Computacional através da Programação.</p>
-<p class="escola-texto-dois">A turma mais estudiosa é a Segunda Série.
+     <p class="escola-texto-dois">A turma mais estudiosa é a Segunda Série.
     Uma turma diversa e engajada, as vezes, um pouco baguncenceira, mas que entrega exelentes resultados!</p>
 </div>
-<img class="escola-imagem" src="Studying-pana (1).png" alt="estudando">
+     <img class="escola-imagem" src="Studying-pana (1).png" alt="estudando">
 </section>
 <section id="estudante">
         <h2 class=”estudante-titulo”>Quem são nossos estudantes?</h2>
