--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
      <meta charset="UTF-8">
      <meta http-equiv= "X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <h1>CCM Luiz Augusto Morais Rego</h1>
-     <h2>Iara Nohely N°12 2°B</h2>
- <title>Document</title>
+     <h1 class="CCM">CCM Luiz Augusto Morais Rego</h1>
+     <h2 class="Nome">Iara Nohely N°12 2°B</h2>
+ <title>Site escola</title>
      <link rel="stylesheet" href="style.css">
      <link "<link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
